--- a/bytetcc-supports-springcloud/pom.xml
+++ b/bytetcc-supports-springcloud/pom.xml
@@ -100,6 +100,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-openfeign-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-commons</artifactId>
 		</dependency>
 		<!-- <dependency> -->
