--- a/bytetcc-supports-dubbo/pom.xml
+++ b/bytetcc-supports-dubbo/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.bytesoft</groupId>
 		<artifactId>bytetcc-parent</artifactId>
-		<version>0.5.0-SNAPSHOT</version>
+		<version>0.5.0-ALPHA1</version>
 	</parent>
 	<artifactId>bytetcc-supports-dubbo</artifactId>
 	<packaging>jar</packaging>
@@ -93,6 +93,14 @@
 					<artifactId>spring</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-autoconfigure</artifactId>
 		</dependency>
 	</dependencies>
 
